--- a/WebApplication3/Views/Shared/_Layout.cshtml
+++ b/WebApplication3/Views/Shared/_Layout.cshtml
@@ -49,10 +49,12 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="~/Donate/Donate">Donate</a>
                 <li class="dropdown">
-                    <a class="nav-link"style="color:white" href="~/PatientReferral/PatientReferral">Refer a Patient</a>
+                    <a class="nav-link" style="color:white" href="~/PatientReferral/PatientReferral">Refer a Patient</a>
                     <div class="dropdown-content">
                         <a href="~/PatientReferral/PatientReferralPasswordPage">Get Started</a>
                     </div>
+                <li class="nav-item active">
+                    <a class="nav-link" href="~/ContactUs/ContactUs">Contact Us</a>
             </ul>
             <img src="~/Pictures/TwitterJustBird.png" width="35" height="25" onclick="window.open('https://twitter.com/soslouisville?lang=en')" style="cursor:pointer;padding-left:4px" /><img />
             <img src="~/Pictures/FacebookWhite.png" width="30" height="28" onclick="window.open('https://www.facebook.com/SurgeryonSundayLouisville/')" style="cursor:pointer; padding-left:4px" /><img />
@@ -171,6 +173,7 @@
                         <p class="card-text"><a href="~/PatientReferral/PatientReferral">Patient Referral</a></p>
                         <p class="card-text"><a href="">Events</a></p>
                         <p class="card-text"><a href="~/Donate/Donate">Donate</a></p>
+                        <p class="card-text"><a href="~/ContactUs/ContactUs">Contact Us</a></p>
                     </div>
                 </div>
             </div>
