hovering effercts added to navbar, changed spacing at bottom of about page

--- a/WebApplication3/Content/bootstrap.css
+++ b/WebApplication3/Content/bootstrap.css
@@ -3488,7 +3488,7 @@ tbody.collapse.show {
     .dropdown-item:hover, .dropdown-item:focus {
         color: #16181b;
         text-decoration: none;
-        background-color: #f8f9fa;
+        background-color: darkred;
     }
 
     .dropdown-item.active, .dropdown-item:active {
