--- a/WebApplication3/Views/Shared/_Layout.cshtml
+++ b/WebApplication3/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
             <ul class="navbar-nav mr-auto">
 
                 <li class="dropdown">
-                    <a class="nav-link" href="~/Home/About"> <span style="color:white">About</span> <span class="sr-only">(current)</span></a>
+                    <a class="nav-link dropdown-item" href="~/Home/About"> <span style="color:white">About</span> <span class="sr-only">(current)</span></a>
                     <div class="dropdown-content">
                         <a href="~/Home/Staff">Staff</a>
                         <a href="~/Home/BoardOfDirectors">Board of Directors</a>
@@ -33,7 +33,7 @@
                 </li>
 
                 <li class="dropdown">
-                    <a class="nav-link" href="~/GetInvolved/GetInvolved"><span style="color:white">Get Involved</span></a>
+                    <a class="nav-link dropdown-item" href="~/GetInvolved/GetInvolved"><span style="color:white">Get Involved</span></a>
                     <div class="dropdown-content">
                         <a href="~/GetInvolved/NonPhysicianClinicalForm">Non-Physician Clinical Volunteer</a>
                         <a href="~/GetInvolved/PhysicianForm">Physician Volunteer</a>
@@ -43,18 +43,18 @@
                         @*</div>*@
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="~/GetHelp/GetHelp">Get Help</a>
+                    <a class="nav-link dropdown-item" href="~/GetHelp/GetHelp">Get Help</a>
                 <li class="nav-item active">
-                    <a class="nav-link" href="~/Account/Login">Login</a>
+                    <a class="nav-link dropdown-item" href="~/Account/Login">Login</a>
                 <li class="nav-item active">
-                    <a class="nav-link" href="~/Donate/Donate">Donate</a>
+                    <a class="nav-link dropdown-item" href="~/Donate/Donate">Donate</a>
                 <li class="dropdown">
-                    <a class="nav-link" style="color:white" href="~/PatientReferral/PatientReferral">Refer a Patient</a>
+                    <a class="nav-link dropdown-item" style="color:white" href="~/PatientReferral/PatientReferral">Refer a Patient</a>
                     <div class="dropdown-content">
                         <a href="~/PatientReferral/PatientReferralPasswordPage">Get Started</a>
                     </div>
                 <li class="nav-item active">
-                    <a class="nav-link" href="~/ContactUs/ContactUs">Contact Us</a>
+                    <a class="nav-link  dropdown-item" href="~/ContactUs/ContactUs">Contact Us</a>
             </ul>
             <img src="~/Pictures/TwitterJustBird.png" width="35" height="25" onclick="window.open('https://twitter.com/soslouisville?lang=en')" style="cursor:pointer;padding-left:4px" /><img />
             <img src="~/Pictures/FacebookWhite.png" width="30" height="28" onclick="window.open('https://www.facebook.com/SurgeryonSundayLouisville/')" style="cursor:pointer; padding-left:4px" /><img />
