--- a/WebApplication3/Content/bootstrap.css
+++ b/WebApplication3/Content/bootstrap.css
@@ -3494,7 +3494,7 @@ tbody.collapse.show {
     .dropdown-item.active, .dropdown-item:active {
         color: #fff;
         text-decoration: none;
-        background-color: #2780E3;
+        background-color: darkred;
     }
 
     .dropdown-item.disabled, .dropdown-item:disabled {
