--- a/WebApplication3/Views/Shared/_Layout.cshtml
+++ b/WebApplication3/Views/Shared/_Layout.cshtml
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="~/Content/bootstrap.css">
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-danger"style="font-size:20px">
-        <img class="navbar-brand" src="~/Pictures/SOS_white_logo.png" width="170" height="80"onclick="window.location.href='/Home'"style="cursor:pointer" />
+    <nav class="navbar navbar-expand-lg navbar-dark bg-danger" style="font-size:20px">
+        <img class="navbar-brand" src="~/Pictures/SOS_white_logo.png" width="170" height="80" onclick="window.location.href='/Home'" style="cursor:pointer" />
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -59,6 +59,7 @@
             <img src="~/Pictures/TwitterJustBird.png" width="35" height="25" onclick="window.open('https://twitter.com/soslouisville?lang=en')" style="cursor:pointer;padding-left:4px" /><img />
             <img src="~/Pictures/FacebookWhite.png" width="30" height="28" onclick="window.open('https://www.facebook.com/SurgeryonSundayLouisville/')" style="cursor:pointer; padding-left:4px" /><img />
             <img src="~/Pictures/igWhiteUse.png" width="32" height="33" onclick="window.open('https://www.facebook.com/SurgeryonSundayLouisville/')" style="cursor:pointer;padding-left:4px;padding-bottom:1px" /><img />
+            <div id="google_translate_element"></div>
         </div>
     </nav>
     <style>
@@ -180,6 +181,13 @@
 
         </footer>
     </div>
+    <script type="text/javascript">
+        function googleTranslateElementInit() {
+            new google.translate.TranslateElement({ pageLanguage: 'en' }, 'google_translate_element');
+        }
+    </script>
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
     <!--End of Footer Contents-->
 
     @Scripts.Render("~/bundles/jquery")
