--- a/WebApplication3/Views/Account/Login.cshtml
+++ b/WebApplication3/Views/Account/Login.cshtml
@@ -59,7 +59,7 @@
     </div>
 </div>
 
-<p><a href="~/EventCreator/EventCreator"><font color="Crimson" style="padding-left:5vw; padding-right:5vw">Create an Event</font></a></p>
+<p><a href="~/EventCreator/EventCreator"><font style="padding-left:5vw; padding-right:5vw">Create an Event</font></a></p>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
