--- a/WebApplication3/Views/Home/Index.cshtml
+++ b/WebApplication3/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿<head><meta http-equiv="refresh" content="0; url=http://example.com/" /></head>
+﻿<head><meta http-equiv="refresh" content=0"; /></head>
 
 <div class="jumbotron">
     <h1>KICKASS HEADER</h1>
