--- a/WebApplication3/Views/Shared/_Layout.cshtml
+++ b/WebApplication3/Views/Shared/_Layout.cshtml
@@ -55,6 +55,8 @@
                     </div>
                 <li class="nav-item active">
                     <a class="nav-link  dropdown-item" href="~/ContactUs/ContactUs">Contact Us</a>
+                <li class="nav-item active">
+                    <a class="nav-link dropdown-item" href="~/Calendar/Calendar">Event Calendar</a>
             </ul>
             <img src="~/Pictures/TwitterJustBird.png" width="35" height="25" onclick="window.open('https://twitter.com/soslouisville?lang=en')" style="cursor:pointer;padding-left:4px" /><img />
             <img src="~/Pictures/FacebookWhite.png" width="30" height="28" onclick="window.open('https://www.facebook.com/SurgeryonSundayLouisville/')" style="cursor:pointer; padding-left:4px" /><img />
