--- a/WebApplication3/Views/GetInvolved/NonClinicalForm.cshtml
+++ b/WebApplication3/Views/GetInvolved/NonClinicalForm.cshtml
@@ -6,7 +6,7 @@
 }
 
 
-@using (Html.BeginForm("NonClinical", "NonClinical", FormMethod.Post))
+@using (Html.BeginForm("NonClinical", "GetInvolved", FormMethod.Post))
 {
     <br />
     <h2 style="color:crimson; padding-left:5vw; padding-right:5vw">Non-Clinical General Volunteer Form</h2>
