--- a/WebApplication3/Views/PatientReferral/PatientReferral.cshtml
+++ b/WebApplication3/Views/PatientReferral/PatientReferral.cshtml
@@ -27,7 +27,7 @@
         <br />
         <p>For a list of information we need to accept patient referrals, <a style="color: crimson" href="http://www.soslouisville.org/wp-content/uploads/2018/01/Referral-Questions.pdf">click here.</a> </p>
         <br />
-        <p>If you already have the login information for our referral portal, <a style="color: crimson" href="~/PatientReferral/PatientReferralPasswordPage">click here.</a>  </p>
+        <p>If you already have the login information for our referral portal, <a style="color: crimson" href="~/Account/Login">click here.</a>  </p>
         <br />
         <br />
 
