--- a/WebApplication3/Views/LandingPage/LandingPage.cshtml
+++ b/WebApplication3/Views/LandingPage/LandingPage.cshtml
@@ -5,8 +5,11 @@
 }
 
 <br />
-<h2 style="color:crimson; padding-left:5vw; padding-right:5vw">Welcome Admin</h2>
+<h2 style="color:black; padding-left:5vw; padding-right:5vw; font-size:32px"><b>Welcome Admin</b></h2>
 <br />
-<li><a href="~/EventCreator/EventCreator">Create an event</a></li>
-<li>Another Admin Link here</li>
-<li>I'm not sure what else to put on this page....</li>
+<p style="padding-left:5vw; padding-right:5vw">
+    <a href="~/EventCreator/EventCreator" style="font-size:30px;color:crimson">Create an event</a><br /><br />
+    <a href="https://calendar.google.com/calendar/embed?src=4bdbs6f9hfmqdp76bifg5rtm7o%40group.calendar.google.com&ctz=America%2FNew_York" style="font-size:30px;color:crimson">View Calendar</a><br /><br />
+    <a href="mailto:example@SOS.com" style="font-size:30px;color:crimson">Refer a Patient (Please Review needed info PDF)</a><br /><br />
+
+</p>
