footer connected to event calendar

--- a/WebApplication3/Views/Shared/_Layout.cshtml
+++ b/WebApplication3/Views/Shared/_Layout.cshtml
@@ -170,7 +170,7 @@
                         <p class="card-text"><a href="~/GetHelp/GetHelp">Get Help</a></p>
                         <p class="card-text"><a href="~/GetInvolved/GetInvolved">Get Involved</a></p>
                         <p class="card-text"><a href="~/PatientReferral/PatientReferral">Patient Referral</a></p>
-                        <p class="card-text"><a href="">Events</a></p>
+                        <p class="card-text"><a href="~/Calendar/Calendar">Events</a></p>
                         <p class="card-text"><a href="~/Donate/Donate">Donate</a></p>
                         <p class="card-text"><a href="~/ContactUs/ContactUs">Contact Us</a></p>
                     </div>
