--- a/WebApplication3/Views/EventCreator/EventCreator.cshtml
+++ b/WebApplication3/Views/EventCreator/EventCreator.cshtml
@@ -1,17 +1,37 @@
-﻿
+﻿@model WebApplication3.Models.EventViewModel
 @{
-    ViewBag.Title = "EventCreator";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+                ViewBag.Title = "EventCreator";
+                Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+
+@using (Html.BeginForm("NonClinical", "GetInvolved", FormMethod.Post))
+
+
 
 <h2><Font color="Crimson">Create an Event</Font></h2>
 
 <form>
-    <p>Event Name:     <input type="text" title="Event Name" /></p>
-    <p>Event Location: <input type="text" title="Event Location" /></p>
-    <p>Event Date:     <input type="date" title="Event Date" /></p>
-    <p>Event Time:     <input type="time" title="Event Time" /></p>
-    <p><input type="button" value="Create Event" /></p>
+    <label>Event Name</label>
+    <div>
+        @Html.TextBoxFor(Model => Model.EventSurgery)
+    </div>
+
+
+    <label>Location</label>
+    <div>
+        @Html.TextBoxFor(Model => Model.EventLocation)
+    </div>
+
+    <label>Date</label>
+    <div>
+        @Html.TextBoxFor(Model => Model.EventDate)
+    </div>
+
+    <label>Patient</label>
+    <div>
+        @Html.TextBoxFor(Model => Model.Patient)
+    </div>
 
 </form>
 
