--- a/WebApplication3/Views/EventCreator/EventCreator.cshtml
+++ b/WebApplication3/Views/EventCreator/EventCreator.cshtml
@@ -5,7 +5,7 @@
 }
 
 
-@using (Html.BeginForm("EventCreator", "EventCreator", FormMethod.Post))
+@using (Html.BeginForm("Event", "EventCreator", FormMethod.Post))
 
 
 {
