Contact Form Submission

--- a/WebApplication3/Views/ContactUs/ContactUs.cshtml
+++ b/WebApplication3/Views/ContactUs/ContactUs.cshtml
@@ -22,28 +22,26 @@
     <div class="container">
 
         <div class="justify-content-end" id="contact-form">
-            <form id="contact" method="post" class="form" role="form">
+            <form id="contact" class="form" role="form" action="https://formspree.io/solutionsquad2017@gmail.com" method="POST">
                 <div class="row">
                     <div class="col-xs-6 col-md-6 form-group">
-                        <input class="contact-input form-control" id="first-name-input" placeholder="First Name" type="text" required autofocus/>
+                        <input class="contact-input form-control" id="first-name-input" name="name" placeholder="Name" type="text" required autofocus/>
                     </div>
                     <div class="col-xs-6 col-md-6 form-group">
-                        <input class="contact-input form-control" id="last-name-input" placeholder="Last Name" type="text" required />
+                        <input class="contact-input form-control" id="email-input" name="_replyto" placeholder="Email" type="email" required />
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-xs-6 col-md-6 form-group">
-                        <input class="contact-input form-control" id="email-input" placeholder="Email Address" type="email" required />
-                    </div>
-                    <div class="col-xs-6 col-md-6 form-group">
-                        <input class="contact-input form-control" id="phone-input" placeholder="Phone Number" type="text" required />
+                    <div class="col-md-12 form-group">
+                        <input class="contact-input form-control" id="subject-input" name="_subject" placeholder="Subject" type="text" required/>
                     </div>
                 </div>
-                <textarea class="contact-input form-control" id="message-input" placeholder="How can we help?" rows="5"></textarea>
+                <textarea class="contact-input form-control" id="message-input" name="message" placeholder="How can we help?" rows="5"></textarea>
                 <br />
+                <input type="hidden" name="_next" value="equine.cis420.net/ContactUs/ContactUs" />
                 <div class="row">
                     <div class="col-xs-12 col-md-12 form-group">
-                        <button class="custom-button btn pull-right" type="submit">Send</button>
+                        <button class="custom-button btn pull-right" type="submit" value="Send">Send</button>
                     </div>
                 </div>
             </form>
